[gd_scene load_steps=5 format=2]

[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://World/Levels/Hell/HellTileMap.tscn" type="PackedScene" id=2]
[ext_resource path="res://LavaPlatform.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="LavaPlatform" type="Node2D"]
script = ExtResource( 3 )

[node name="Platform1" parent="." instance=ExtResource( 2 )]
tile_data = PoolIntArray( 0, 0, 196609, 1, 0, 196609, 65536, 0, 196609, 65537, 0, 196609 )

[node name="Platform2" parent="." instance=ExtResource( 2 )]
tile_data = PoolIntArray( 4, 0, 196609, 5, 0, 196609, 65540, 0, 196609, 65541, 0, 196609 )

[node name="Hitbox" parent="." instance=ExtResource( 1 )]
position = Vector2( 16, 16 )

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 1 )

[node name="Hitbox2" parent="." instance=ExtResource( 1 )]
position = Vector2( 80, 16 )

[node name="CollisionShape2D" parent="Hitbox2" index="0"]
shape = SubResource( 1 )

[node name="PlatformTimer" type="Timer" parent="."]

[node name="PlatformTimer2" type="Timer" parent="."]
[connection signal="timeout" from="PlatformTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="PlatformTimer2" to="." method="_on_PlatformTimer2_timeout"]

[editable path="Hitbox"]

[editable path="Hitbox2"]
